making consistent a public interface which differed depending on whether you were building debug. how skanky was that? bug 84842 r=darin,hyatt