netwerk/base/src/nsRequestObserverProxy.h
@@ -45,10 +45,7 @@ public:
     nsIRequestObserver *Observer() { return mObserver; }
 
     nsresult FireEvent(nsARequestObserverEvent *);
-#ifdef DEBUG
-    nsIEventQueue *GetEventQueue()
-               { return mEventQ.get(); } // debugging-only; no addref
-#endif
+    nsIEventQueue *EventQueue() { return mEventQ.get(); } // debugging aid
     nsresult SetEventQueue(nsIEventQueue *);
 
 protected:
